# hexlet_bot

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
bot/: __init__.py  app.py  bot.py  config.yml  config.yml.template  const.py  logger.py  reader.py
bot/db/: db.py  install.sql  pgsql
bot/script/: bot.py  run.py
bot/scripts/: runner.py
tests/: conftest.py  monkey_patches.py  run_once_to_get_session_string.py  test_config.yml  test_handlers.py  test_scheduler.py  utils.py
