[tool.poetry]
name = "hexlet_bot"
version = "0.1.0"
description = "Telegram bot to test our skills with building one."
authors = ["Hexlet Group 2021"]
packages = [
    {include = "bot"},
]

[tool.poetry.dependencies]
python = "^3.8"
Telethon = "^1.22.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hexlet-bot = "bot.script.run:main"
